Finishing off the contacts put method
